--- a/init/cvl_bachelor_thesis.tex
+++ b/init/cvl_bachelor_thesis.tex
@@ -21,9 +21,7 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[noindentafter]{titlesec}
-% \usepackage[ansinew]{inputenc}      % ---> für umlaute in deutschen references
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc} 
+\usepackage[ansinew]{inputenc}      % ---> für umlaute in deutschen references
 \usepackage[printonlyused]{acronym}	% acronyms
 \usepackage{changepage}							% for the titlepage
 \usepackage{a4}											% margin
@@ -104,15 +102,33 @@
 \tableofcontents
 % put your abstract here
 \abstract{
+Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie 
+consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan 
+et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis 
+dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer 
+adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore 
+magna aliquam erat volutpat.
+
+Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit 
+lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor 
+in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu 
+feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui 
+blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+
+Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet 
+doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, 
+consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet 
+dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud 
+exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 }
 \clearpage
 \pagenumbering{arabic}
 
 \include{s1_introduction}
 \include{s2_related-work}
-\include{s3_methodology}
-\include{s4_results}
-\include{s5_conclusion}
+%\include{s3_methodology}
+%\include{s4_results}
+%\include{s5_conclusion}
 
 % bibliography
 \addcontentsline{toc}{section}{Bibliography}
