--- a/s1_introduction.tex
+++ b/s1_introduction.tex
@@ -3,103 +3,53 @@
 %----------------------------------------------
 \section{Introduction}
 \label{sec:introduction}
-Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
 %----------------------------------------------
-% Section
+% * Motivation 
 %----------------------------------------------
-\subsection{Sub Section}
-\label{sec:subSection}
-Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-
- For those who do not read \textbf{readme} texts:
-
-\begin{itemized}
-	\item do not make a tableofcontents
-	\item the proposed structure (introduction, related work, ...)
-	\item if you have any questions concerning latex, or the proposed
-		style sheet, contact your supervisor.
-	\item if you detect errors within this style sheet, contact: \\
-		diem@caa.tuwien.ac.at
-	\item please keep the abstract short enough to fit on the title page
-	\item concentrate on the essential content, but do not write bushwa
-	 	in order to extend your thesis
-	\item do not use filler words such as: much, more, many...
-	\item do not write statements with out proof such as: \\
-		\textit{Recently, document analysis has become an important field.}
-	\item don't ever cite wikipedia
-	\item but you should cite all papers, your work is based upon
-	\item if you chose a specific method, always state the reason
-	\item some general hints for literature research:
-		\begin{itemized}
-			\item \url{http://dblp.mpi-inf.mpg.de/dblp-mirror/index.php} \\
-				the webpage may seem old-fashioned, but it has 
-  			a live search and indexes all important conferences
-  			(not solely IEEE or ACM...). additionally links to 
-  			the bibtex and the *.pdf are provided
-			\item \url{http://ieeexplore.ieee.org/Xplore/dynhome.jsp} \\
-  			the official IEEE search engine (you need a TU VPN
-  			in order to access the *.pdfs)
-			\item \url{http://portal.acm.org/portal.cfm} \\
-	 			the official acm search engine
-			\item \url{http://jabref.sourceforge.net/} \\
-  			nice tool to organize your references
-  		\item \url{http://www.citeulike.org/} \\
-  			some people think it is best...
-		\end{itemized}
-	\item if you are bored while writing: \\
-   \url{http://stud3.tuwien.ac.at/~e0226595/james-bomb/index.htm}
-   
-   
-\end{itemized}
-
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
-
-\begin{figure}[htb]
-	\centering
-	\includegraphics[width = \textwidth]{img/sift_descriptor.pdf}
-	\caption[\textsc{Sift} Descriptor]{The computation of a \textsc{Sift} descriptor. The cubes illustrate different gradient magnitudes. In this case eight $2\times2$ orientation histograms are used as feature vector. The right illustration shows the trilinear interpolation of a sample having a gradient orientation of $292.5\degr$.}
-	\label{fig:sift}
-\end{figure}
-
-Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet (see Figure \ref{fig:sift}). Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua \cite{low-04}. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet \cite{mik-05}.
-
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+\subsection{Motivation}
+\label{sec:Motivation}
 
 %----------------------------------------------
-% Another Sub Section
+% ** Hardware und OS Abrstraktion
 %----------------------------------------------
-\subsection{Another Sub Section}
-\label{sec:subSection2}
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi (see Table~\ref{tab:performance}).
+\subsubsection{Hardware und OS Abstraktion}
+\label{sec:Hardware und OS Abstraktion}
 
-\begin{table}[ht]
-\centering
-		\begin{tabular}{r | c c c c}
-													& \#	& \textbf{recall} 	& \textbf{precision} 	&  $F_{0.5}$-score \\ 
-		\hline
-			\textbf{normal} 		& 913	&	0.732	& 0.862	&	0.792	\\
-			\textbf{degraded}		& 142	& 0.296	& 0.539	& 0.382	\\
-			\setB								& 198	& -			& 0.712	& 0.712	\\
-		\end{tabular}
-		\caption{System's recall, precision and $F$-score when normal and degraded characters are considered. The last row shows the character evaluation from Section~\ref{sec:introduction} with degraded characters.}
-	\label{tab:performance}
-\end{table}
+%----------------------------------------------
+% ** Interaktion mit einer Bildsuchmaschiene
+%----------------------------------------------
+\subsubsection{Interaktion mit einer Bildsuchmaschiene}
+\label{sec:Interaktion mit einer Bildsuchmaschiene}
 
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
-The \textsc{rbf} kernel is defined by:
-\begin{equation}
-	k(x_i,x_j) = e^{-\gamma \left\|x_i-x_j\right\|^2} \ \ \gamma > 0
-	\label{eq:rbf}
-\end{equation}
-where $x_i$ and $x_j$ are feature vectors and $\gamma$ is a parameter which needs to be determined using cross-validation. The \textsc{rbf}, kernel has the advantage, that solely one parameter needs to be determined while at the same time being flexible enough to handle complex training sets.
+%----------------------------------------------
+% ** Interaktion mit einer Bildsuchmaschiene
+%----------------------------------------------
+\subsubsection{Interface für Kreshmoi}
+\label{sec:Interface für Kreshmoi}
 
+%----------------------------------------------
+% * Möglichkeiten zu Umsetzung
+%----------------------------------------------
+\subsection{Möglichkeiten zur Umsetzung}
+\label{sec:Möglichkeiten zur Umsetzung}
 
-\paragraph{Paragraph}
-Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+%----------------------------------------------
+% ** JavaApplet
+%----------------------------------------------
+\subsubsection{JavaApplet}
+\label{sec:JavaApplet}
 
-Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+%----------------------------------------------
+% ** HTML5
+%----------------------------------------------
+\subsubsection{HTML5}
+\label{sec:HTML5}
+
+%----------------------------------------------
+% * Pflichtenheft
+%----------------------------------------------
+\subsection{Pflichtenheft}
+\label{sec:Pflichtenheft}
 
 
