--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -3,3 +3,10 @@
 %----------------------------------------------
 \section{Related Work}
 \label{sec:relatedWork}
+
+%----------------------------------------------
+% * Motivation 
+%----------------------------------------------
+\subsection{Funktionsumfang von Betrachtungstools}
+\label{sec:Motivation}
+
