--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -3,3 +3,94 @@
 %-------------------------------------------------------
 \section{Methodology}
 \label{sec:methodology}
+
+%----------------------------------------------
+% * Verwendetet Technologien
+%----------------------------------------------
+\subsection{Verwendetet Technologien}
+\label{sec:Verwendetet Technologien}
+
+%----------------------------------------------
+% ** HTTP
+%----------------------------------------------
+\subsubsection{HTTP}
+\label{sec:HTTP}
+
+%----------------------------------------------
+% ** JSON
+%----------------------------------------------
+\subsubsection{JSON}
+\label{sec:JSON}
+
+%----------------------------------------------
+% ** AJAX
+%----------------------------------------------
+\subsubsection{AJAX}
+\label{sec:AJAX}
+
+%----------------------------------------------
+% ** Objectiv J
+%----------------------------------------------
+\subsubsection{Objectiv J}
+\label{sec:Objectiv J}
+
+%----------------------------------------------
+% ** Cappuccino
+%----------------------------------------------
+\subsubsection{Cappuccino}
+\label{sec:Cappuccino}
+
+%----------------------------------------------
+% * Kommunikation mit KRESHMOI
+%----------------------------------------------
+\subsection{Kommunikation mit KRESHMOI}
+\label{sec:Kommunikation mit KRESHMOI}
+
+%----------------------------------------------
+% ** Query nach Bildern
+%----------------------------------------------
+\subsubsection{Query nach Bildern}
+\label{sec:Query nach Bildern}
+
+%----------------------------------------------
+% ** Laden der Bilder
+%----------------------------------------------
+\subsubsection{Laden der Bilder}
+\label{sec:Laden der Bilder}
+
+%----------------------------------------------
+% * Architektur und Komponenten
+%----------------------------------------------
+\subsection{Architektur und Komponenten}
+\label{sec:Architektur und Komponenten}
+
+%----------------------------------------------
+% ** Domänen Model
+%----------------------------------------------
+\subsubsection{Domänen Model}
+\label{sec:Domänen Model}
+
+%----------------------------------------------
+% ** Architektur und Aufteilung in Komponenten
+%----------------------------------------------
+\subsubsection{Architektur und Aufteilung in Komponenten}
+\label{sec:Architektur und Aufteilung in Komponenten}
+
+%----------------------------------------------
+% ** 2DView
+%----------------------------------------------
+\subsubsection{2DView}
+\label{sec:2DView}
+
+%----------------------------------------------
+% ** Kommunikations Module
+%----------------------------------------------
+\subsubsection{Kommunikations Module}
+\label{sec:Kommunikations Module}
+
+%----------------------------------------------
+% * Usability
+%----------------------------------------------
+\subsection{Usability}
+\label{sec:Usability}
+
