--- a/s4_results.tex
+++ b/s4_results.tex
@@ -3,3 +3,16 @@
 %-------------------------------------------------------
 \section{Results}
 \label{sec:results}
+
+%----------------------------------------------
+% * Geschwindigkeit 
+%----------------------------------------------
+\subsection{Geschwindigkeit}
+\label{sec:Geschwindigkeit}
+
+%----------------------------------------------
+% * Usability
+%----------------------------------------------
+\subsection{Usability}
+\label{sec:Usability}
+
