Abstatz: ObjectiveJ erstellt

--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -28,6 +28,8 @@
 \usepackage{changepage}							% for the titlepage
 \usepackage{a4}											% margin
 
+\usepackage{url}
+
 % our style
 % creates the titlepage & does all the formating
 \usepackage{cvl-titlepage}
@@ -117,7 +119,7 @@
 % bibliography
 \addcontentsline{toc}{section}{Bibliography}
 \bibliographystyle{alpha}
-\bibliography{cvl_tr}
+\bibliography{cvl_tr.bib}
 
 \end{document}
 
