--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -26,3 +26,11 @@
   timestamp = {2008.06.13}
 }
 
+%TODO: Prüfen ob angabe so passt
+@OTHER{capp,
+  author = {Cappuccino Project},
+  title = {Cappuccino Web Framework},
+  month = {Jul},
+  year = {2013},
+  howpublished = {\url{http://www.cappuccino-project.org/}}
+}
