--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -7,13 +7,19 @@
 %----------------------------------------------
 % * Verwendetet Technologien
 %----------------------------------------------
-\subsection{Verwendetet Technologien}
+\subsection{Verwendetet Technologien und Protokolle}
 \label{sec:Verwendetet Technologien}
 
 %----------------------------------------------
 % ** HTTP
 %----------------------------------------------
 \subsubsection{HTTP}
+\label{sec:HTTP}
+
+%----------------------------------------------
+% ** REST
+%----------------------------------------------
+\subsubsection{REST}
 \label{sec:HTTP}
 
 %----------------------------------------------
@@ -33,6 +39,15 @@
 %----------------------------------------------
 \subsubsection{Objectiv J}
 \label{sec:Objectiv J}
+
+Objective J ist eine Programmiersprache welche sich von der Syntax stark an Objective C anlehnt.
+Sie ist eine Erweiterung oder Obermenge von Javascript und wird von einem in Javascript geschriebenen Interpreter abgearbeitet.
+In Javascript können Objekte durch Prototyping erstellt werden, das Konzept von Klassen wird aber nicht unterstüzt.
+Obj J bietet zusätzlich zu den nativen JS Objekten die definition von Klassen inklusive Vererbung und die generierung von Objekten daraus.
+Obwohl es die Sprache erlaubt für Variablen, Methodenparameter und Rückgaben eine Datentyp zu definieren, 
+werden diese aufgrund von schwacher Typisierung vom Interpreter nicht auf ihre Einhaltung überprüft.
+In der aktullen Version wird die Übergabe von Referenzen als Parameter ähnlich einem Pointer in C unterstützt.
+\cite{capp}
 
 %----------------------------------------------
 % ** Cappuccino
@@ -93,4 +108,10 @@
 %----------------------------------------------
 \subsection{Usability}
 \label{sec:Usability}
+
+%----------------------------------------------
+% ** Workflow bei der Befundung
+%----------------------------------------------
+\subsubsection{Workflow bei der Befundung}
+\label{sec:Workflow bei der Befundung}
 
