Kapitel: Methodology/Technologien/Cappuccino geschrieben

--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -34,3 +34,13 @@
   year = {2013},
   howpublished = {\url{http://www.cappuccino-project.org/}}
 }
+
+@OTHER{kres,
+  author = {},
+  title = {Khresmoi - Desciption of Work - Proposal 257528},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year = {},
+  pages = {1-47},
+  timestamp = {2008.06.13}
+}
+
