--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -8,5 +8,9 @@
 % * Motivation 
 %----------------------------------------------
 \subsection{Funktionsumfang von Betrachtungstools}
+%TODO: Kontakt markus .... was gibst schon
+%TODO: Kontakt markus .... pacs workstations
+\subsubsection{Beispiel Osirix}
+%TODO: Wie betrachtet man das bild
 \label{sec:Motivation}
 
