--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -60,6 +60,7 @@ In der aktullen Version wird die Übergabe von Referenzen als Parameter ähnlich
 %----------------------------------------------
 \subsection{Kommunikation mit KRESHMOI}
 \label{sec:Kommunikation mit KRESHMOI}
+%Noch in der entwicklung, am besten später machen
 
 %----------------------------------------------
 % ** Query nach Bildern
@@ -72,6 +73,7 @@ In der aktullen Version wird die Übergabe von Referenzen als Parameter ähnlich
 %----------------------------------------------
 \subsubsection{Laden der Bilder}
 \label{sec:Laden der Bilder}
+
 
 %----------------------------------------------
 % * Architektur und Komponenten
