--- a/s4_results.tex
+++ b/s4_results.tex
@@ -9,10 +9,13 @@
 %----------------------------------------------
 \subsection{Geschwindigkeit}
 \label{sec:Geschwindigkeit}
+%Wie viel wird übertragen
+%Wo geht die zeit hin
+%mem
 
 %----------------------------------------------
 % * Usability
 %----------------------------------------------
 \subsection{Usability}
 \label{sec:Usability}
-
+%markus fragen
