Kapitel2: Struktur geändert

--- a/s1_introduction.tex
+++ b/s1_introduction.tex
@@ -55,16 +55,22 @@ Dazu muss das User-Interface die grundliegenden Funktionen eines Betrachtungs-To
 
 
 %----------------------------------------------
-% ** Hardware und OS Abrstraktion
-%----------------------------------------------
-\subsubsection{Hardware und OS Abstraktion}
-\label{sec:Hardware und OS Abstraktion}
-
-%----------------------------------------------
 % * Pflichtenheft
 %----------------------------------------------
 \subsection{Pflichtenheft}
 \label{sec:Pflichtenheft}
+\begin{itemize}
+	\item Kommunikation mit KRESHMOI über HTTP Anfragen. Dies beinhaltet das Senden von Suchanfragen, auswerten der Ergebnisse und laden der zugehörigen Bilder.
+	\item Betrachen von CT Volumes. Navigation durch die einzelnen Schnitte eines Volumes entlang einer auswählbaren Achse.
+	\item Schnelles anpassen von Kontrast und Helligkeit bei den einzelnen Schnittbildern mit der Maus (Fensterung).
+	\item Zoomen und Scrollen des Bildausschnittes in einem Bild oder Volume.
+	\item Tools zum Anotieren von Bereichen innerhalb der Bildern welche zur Interaktion mit der Bildsuche dienen.
+	\item Präsentation der Suchergebnisse.
+	\item Anzeige der den Bildern oder Volumes zugehörigen Reports.
+	\item Ansicht zum vergleichen von verschiedenen Ergebnissen.
+	\item Modulare Komposition der verschidenen Ansichten.
+	\item Umsetzung der Applikation im Webbrowser.
+\end{itemize}
 
 %----------------------------------------------
 % * Möglichkeiten zu Umsetzung
