--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -8,9 +8,17 @@
 % * Motivation 
 %----------------------------------------------
 \subsection{Funktionsumfang von Betrachtungstools}
+\label{sec:Funktionsumfang von Betrachtungstools}
+
+\subsubsection{Zoom und Scroll}
+\subsubsection{Fensterung und Level}
+\subsubsection{Histogram Modifikation}
+\subsubsection{Negativ bilden}
+\subsubsection{Distanz und Flächenmaß}
+\subsubsection{Collagen}
 %TODO: Kontakt markus .... was gibst schon
 %TODO: Kontakt markus .... pacs workstations
 \subsubsection{Beispiel Osirix}
+\label{sec:Beispiel Osirix}
 %TODO: Wie betrachtet man das bild
-\label{sec:Motivation}
 
